# jwst-cosmos

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  USAGE.md  flake.nix
nix/: default.nix
src/: app.rs  config.rs  main.rs
src/screens/: browser.rs  generator.rs  mod.rs  models.rs
src/services/: comfyui.rs  jwst_api.rs  jwst_esa.rs  mod.rs  ollama.rs  ssh_tunnel.rs  wallust.rs
src/utils/: image_utils.rs  mod.rs
workflows/: controlnet_canny.json  controlnet_depth.json  img2img_sdxl.json
